# YOGA

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  COPYING  Makefile.am  README.md  bootstrap  configure.ac  relink-files.sh  update_submodules.sh
CatchTestRunners/: CMakeLists.txt  CatchTestRunnersConfig.cmake  CatchUnitTestRunner.cpp  README.md  RingAssertions.h
MessagePasser/: CMakeLists.txt  Makefile.am  README.md  bootstrap  configure.ac  valgrind.sh
MessagePasser/MessagePasser/: CMakeLists.txt  Message.h  MessagePasser.h  MessagePasser.hpp  MessagePasserAllToAll.hpp  MessagePasserBalance.hpp  MessagePasserBroadcasts.hpp  MessagePasserConfig.cmake  MessagePasserGathers.hpp  MessagePasserProbe.hpp  MessagePasserRecvs.hpp  MessagePasserReductions.hpp  MessagePasserScatters.hpp  MessagePasserSends.hpp  MessageStatus.hpp
MessagePasser/docs/: conf.py  examples.rst  index.rst
cmake/: CMakeLists.txt  CompilerOptions.cmake  DetectCXXStandard.cmake  FindCGNS.cmake  FindEGADS.cmake  FindEngineeringSketchPad.cmake  FindMASA.cmake  FindMETIS.cmake  FindParMETIS.cmake  FindSurreal.cmake  FindTetgen.cmake  FindZoltan.cmake  GitVersion.cmake  IntelCompilerSettings.cmake  KokkosOptions.cmake  RingBuildTypes.cmake  RingPostInstall.cmake  one-ring-common.cmake
ddata/: CMakeLists.txt  Makefile.am  README.md  bootstrap  configure.ac
ddata/ddata/: CMakeLists.txt  ComplexDifferentiation.h  CustomAllocator.h  DTD.h  ETD.h  ETDExpression.h  ETDFunctions.h  ETDOperators.h  ETDStack.h  ETDv.h  Expr.h  Makefile.am  SmoothFunctions.h  Stack.h  StackFunctions.h  StackOperators.h  VTD.h  ddataConfig.cmake
ddata/miniapp/: CMakeLists.txt  Functions.h  cmake-variants.yaml  main.cpp  sacado_main.cpp  surreal_main.cpp  test_euler_flux_1d_surreal_test.cpp
ddata/test/: AllocatorTests.cpp  CMakeLists.txt  ComplexDifferentiationTests.cpp  ETDFunctionTests.cpp  ETDOperatorTests.cpp  SmoothFunctionsTests.cpp  StackBasedTests.cpp  StackFunctionTests.cpp  StackJacobianTests.cpp  StackOperatorTests.cpp  TestHelpers.h  VTDTests.cpp
parfait/: CMakeLists.txt  Makefile.am  README.md  bootstrap  configure.ac  parfaitConfig.cmake  valgrind.sh
parfait/parfait/: Adt.h  Adt.hpp  Adt3dExtent.h  Adt3dExtent.hpp  Adt3dPoint.h  Adt3dPoint.hpp  BarChart.h  Barycentric.h  ByteSwap.h  CGNSElements.h  CGNSFaceExtraction.h  CMakeLists.txt  CRS.h  CartBlock.h  CartBlock.hpp  CartBlockVisualize.h  CellContainmentChecker.h  CellTesselator.h  CellWindingConverters.h  Checkpoint.h  CommandLine.h  CommandLineMenu.h  ConsoleRedirect.h  ContiguousMatrixMultiplication.h  DataFrame.cpp  DataFrame.h  DataFrameTools.h  Decompositions.h  DenseMatrix.h  Dictionary.cpp  Dictionary.h  DictionaryEntry.h  DictionaryRules.cpp  DictionaryRules.h  DictionarySchemaValidator.h  DistanceTree.h  DistanceTree.hpp  DualMetrics.h  EdgeBuilder.h  EdgeSegmentProjection.h  (+149 more)
plugin-parfait/: CMakeLists.txt  Makefile.am  README.md  inviscid.py  plugin-parfaitConfig.cmake
plugin-parfait/CellCenteredReProcessor/: CMakeLists.txt  CellCenteredReProcessor.cpp  CellCenteredReProcessor.h
plugin-parfait/DistanceCalculator/: CMakeLists.txt  DistanceCalculatorPlugin.cpp  DistanceCalculatorPlugin.h
plugin-parfait/Interpolator/: CMakeLists.txt  InterpolatePlugin.cpp  InterpolatePlugin.h
plugin-parfait/NodeCenteredPreProcessor/: CMakeLists.txt  CellRedistributor.cpp  CellRedistributor.h  Distributor.h  ExamineCommand.cpp  GraphBuilder.cpp  GraphBuilder.h  InitialNodeSyncer.cpp  InitialNodeSyncer.h  Makefile.am  NC_GrpPreProcessor.cpp  NC_GrpPreProcessor.h  NC_ParmetisPartitioner.h  NC_PartitionerBase.cpp  NC_PartitionerBase.h  NC_PreProcessor.cpp  NC_PreProcessor.h  NC_RCBPartitioner.h  NaiveMesh.cpp  NaiveMesh.h  NodeCenteredPartitioner.h  PProcessor.h  PancakePreProcessorAdapterTo.h  PartitionGrouper.cpp  PartitionGrouper.h  Redistributor.cpp  Redistributor.h
plugin-parfait/SerialPreProcessor/: CMakeLists.txt  Makefile.am  SerialPreProcessor.cpp  SerialPreProcessor.h
plugin-parfait/Viz/: CMakeLists.txt  DepsViz.cpp  DepsViz.h  Makefile.am  ParallelDataFrameWriter.h  ParallelTecplotWriter.h  ParallelVTKWriter.h  ParfaitViz.cpp  ParfaitViz.h  SzPltWriter.cpp  SzPltWriter.h  VtkHacking.h
plugin-parfait/shared/: CGNSReader.cpp  CGNSReader.h  CMakeLists.txt  ElementCounter.cpp  ElementCounter.h  EnsightReader.h  GlobalCellIdBuilder.h  GmshReader.h  JsonSettings.h  Makefile.am  MockReaders.h  ParmetisWrapper.h  Reader.h  ReaderFactory.h  STLReader.h  SU2IO.h  SerialGmshExporter.h  SerialMeshImporter.h  SliceAcrossSections.h  TecplotPointCloudReader.h  TetGenReader.cpp  TetGenReader.h  TriReader.h  UgridAsciiReader.cpp  UgridAsciiReader.h  UgridReader.cpp  UgridReader.h
plugin-parfait/test/: CMakeLists.txt  CellRedistributorTests.cpp  GmshReaderTests.cpp  GmshWriterTests.cpp  InitialNodeSyncerTest.cpp  NoDepsVTKTests.cpp  ParallelTecplotBinaryWriterTests.cpp  RecrusiveBisectionTests.cpp  STLReaderTests.cpp  SU2IOTests.cpp  SerialImporterTests.cpp  SettingsTests.cpp  TecioWriterTests.cpp  UgridReaderTests.cpp  VTKReaderTests.cpp
plugin-parfait/utilities/: CMakeLists.txt  GmshInternalFaceRemover.cpp
t-infinity/: CMakeLists.txt  README.md  bootstrap  configure.ac  install_only_interfaces.sh  run_python_unit_tests.sh  valgrind.sh
t-infinity/docs/: Makefile  about.rst  conf.py  domain.rst  examples.rst  index.rst  inf-command.rst  mesh-adaptation.rst  mesh-deformation.rst  mesh.rst  overset-domain-assembly.rst
t-infinity/examples/: CMakeLists.txt
t-infinity/src/: CMakeLists.txt  Makefile.am  t-infinityConfig.cmake
tracer/: CMakeLists.txt  README.md  aclocal  bootstrap  configure.ac
tracer/docs/: conf.py  index.rst
tracer/include/: Makefile.am  Tracer.cpp  Tracer.h  TracerImpl.h  tracer_c_interface.cpp  tracer_c_interface.h  tracer_fortran_interface.inc
tracer/tests/: CMakeLists.txt  PerformanceTest.cpp  TracerTests.cpp  main.F90  main.c  main.cpp  tracing_wrapper.F90
tracer/utils/: CMakeLists.txt  analyze_trace.py  analyze_trace_tests.py  merge.py
yoga/: CMakeLists.txt  Makefile.am  README.md  bootstrap  configure.ac  notes.txt
(+1139 files in other folders)
