nobase_include_HEADERS = \
MessagePasser/Message.h \
MessagePasser/MessagePasser.h \
MessagePasser/MessagePasser.hpp \
MessagePasser/MessagePasserAllToAll.hpp \
MessagePasser/MessagePasserBalance.hpp \
MessagePasser/MessagePasserBroadcasts.hpp \
MessagePasser/MessagePasserGathers.hpp \
MessagePasser/MessagePasserProbe.hpp \
MessagePasser/MessagePasserRecvs.hpp \
MessagePasser/MessagePasserReductions.hpp \
MessagePasser/MessagePasserScatters.hpp \
MessagePasser/MessagePasserSends.hpp \
MessagePasser/MessagePasserWait.hpp \
MessagePasser/MessageStatus.hpp
